Project

General

Profile

Actions

Bug #18991

closed

rgw_file: RGWReaddir (and cognate ListBuckets request) don't enumerate multi-segment directories

Added by Matt Benjamin about 7 years ago. Updated over 6 years ago.

Status:
Resolved
Priority:
High
Assignee:
Target version:
-
% Done:

0%

Source:
Tags:
Backport:
jewel kraken
Regression:
No
Severity:
3 - minor
Reviewed:
Affected Versions:
ceph-qa-suite:
Pull request ID:
Crash signature (v1):
Crash signature (v2):

Description

This issue has one root cause in librgw, namely that the marker argument to these requests was incorrectly formatted (though the marker cache was working as intended).

Secondarily, for nfs-ganesha users, there is a compounding issue that the RGW fsal was required by "temporary" convention to populate the entire dirent cache for a directory on a single readdir() invocation--the cache_inode/mdcache implementations invariantly pass (before future 2.5 changesets, currently in progress) a null pointer for the start cookie offset, intended to convey this.


Related issues 2 (0 open2 closed)

Copied to rgw - Backport #19167: jewel: rgw_file: RGWReaddir (and cognate ListBuckets request) don't enumerate multi-segment directoriesResolvedNathan CutlerActions
Copied to rgw - Backport #19168: kraken: rgw_file: RGWReaddir (and cognate ListBuckets request) don't enumerate multi-segment directoriesResolvedNathan CutlerActions
Actions #1

Updated by Matt Benjamin about 7 years ago

  • Status changed from New to In Progress
Actions #2

Updated by Matt Benjamin about 7 years ago

  • Status changed from In Progress to Pending Backport
Actions #3

Updated by Matt Benjamin about 7 years ago

  • Backport changed from jewel to jewel kraken
Actions #4

Updated by Nathan Cutler about 7 years ago

  • Copied to Backport #19167: jewel: rgw_file: RGWReaddir (and cognate ListBuckets request) don't enumerate multi-segment directories added
Actions #5

Updated by Nathan Cutler about 7 years ago

  • Copied to Backport #19168: kraken: rgw_file: RGWReaddir (and cognate ListBuckets request) don't enumerate multi-segment directories added
Actions #6

Updated by Nathan Cutler over 6 years ago

  • Status changed from Pending Backport to Resolved
Actions

Also available in: Atom PDF